setup/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: awang-apiserver
    awang-apiserver: console
  name: awang-apiserver-console
  namespace: default
spec:
  selector:
    matchLabels:
      app: awang-apiserver
      awang-apiserver: console
  template:
    metadata:
      labels:
        app: awang-apiserver
        awang-apiserver: console
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "9091"
        prometheus.io/scrape: "true"
    spec:
      serviceAccountName: awang-apiserver-console
      containers:
        - image: ashwang168/capture-the-flag-apiserver:v1
          imagePullPolicy: Always
          name: apiserver
          ports:
            - name: grpc
              containerPort: 1234
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  annotations:
    gloo.solo.io/h2_service: "true"
  labels:
    app: awang-apiserver
    awang-apiserver: console
  name: awang-apiserver-console
  namespace: default
spec:
  ports:
    - name: grpc
      port: 1234
      protocol: TCP
  selector:
    app: awang-apiserver
    awang-apiserver: console
  type: ClusterIP
